# MLOPS_Bank_Customer_Churn_Prediction

./: README.md  app.py  demo.py  pyproject.toml  setup.py
config/: schema.yaml
notebook/: bank-customer-churn.ipynb  mongoDB_demo.ipynb
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py
src/constants/: __init__.py
src/data_access/: proj2_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
templates/: bankdata.html
