[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models of a banking customer churn prediction dataset"
authors = [{name = "Ankita B", email = "ankitabetageri@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}